# ALICE

./: .gitignore  .lookup  ALICE.code-workspace  Makefile  README.md  alignment.py  browse.py  calibrate.py  docker-compose.yml  env.template  environment.yml  example.ipynb  feature_matching.py  fourpoint.py  grabcut.py  label_reconstruction.py  labels.py  points.npy  post_processing.py  pyproject.toml  readme.txt  requirements.txt  setup.py  square.csv  test_features.py  transform.py  utils.py  warping.py
ALICE/: __init__.py  clip.py  config.py  craft.py  log.py  predict.py  process.py  train.py  utils.py  visualise.py
ALICE.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  requires.txt  top_level.txt
alice2/: config.py  evaluate.py  log.py  train.py
archive/: ALICE_corner_finding_tests.ipynb  ALICE_demo_setup.ipynb  ALICE_demo_updated.ipynb  ALICE_label_alignment_tests.ipynb  ALICE_rCNN_Testing.ipynb  ALICE_rCNN_Training.ipynb  ALICE_rcNN_Mask_Plots.ipynb  Mask_RCNN_Basic_Tests.ipynb  boundary_approximation.py  combined-Copy1.ipynb  combined.ipynb  craft-1st.ipynb  craft-Copy1.ipynb  craft-Copy2.ipynb  craft.ipynb  example_notebook.ipynb  features.ipynb  jsons_for_training.ipynb  label_alignment.py  mask_matching_functions.py  normalisation.ipynb  pin_region_finding.ipynb  scatterplot_records.csv
docker/: Dockerfile
notebooks/: main.ipynb  step1.ipynb  training_testing_tf2.ipynb
scalabel/: __init__.py  align.py  alignment.py  calibration.py  features.py  fourpoint.py  labels.py  perspective.py  warping.py
scripts/: convert.py  process.py
(+131 files in other folders)
