[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "alice"
version = "2.0.0"

authors = [
    {name = "Arianna Salili-James", email = "arianna.salili-james@nhm.ac.uk"},
    {name = "Ben Scott", email = "ben@benscott.co.uk"},
]
description = "ALICE: Angled Label Somthing Capture Equipment"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["one", "two"]
license = {text = "BSD-3-Clause"}
classifiers = [

]
dependencies = [

]


[tool.setuptools.packages.find]
where = ["alice"]

[project.scripts]
process = "scripts.process:main"